# sodiumdb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docs.md  readme.md  shell.nix
examples/: python_example.py
src/: main.rs  setup.rs
src/managers/: data_manager.rs  mod.rs
src/middleware/: password.rs
