[package]
name = "sodiumdb"
version = "0.2.2"
edition = "2021"

[profile.dev]
opt-level = "z"
overflow-checks = true
strip = true
lto = true
codegen-units = 1

[profile.release]
opt-level = "z"
overflow-checks = true
strip = true
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-http = "3.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
futures-util = "0.3"
