[package]
name = "sodiumdb"
version = "0.2.5"
edition = "2021"

[profile.dev]
opt-level = "z"
overflow-checks = true
strip = true
lto = true
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = true
codegen-units = 6
rpath = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-http = "3.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
futures-util = "0.3"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
num_cpus = "1.4.0"
